fixed angular error

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -107,7 +107,7 @@
                                 <img class="rounded-full w-[38px] h-[38px]" src="../assets/svgs/Rectangle 1061.png" alt="">
                                 <div class="font-inter">
                                     <p class="font-normal text-base leading-[19.36px] text-right">Justin Bergson</p>
-                                    <p class="font-normal  text-sm leading-[16.94px] text-right text-[#787486]">Justin@gmail.com</p>
+                                    <p class="font-normal  text-sm leading-[16.94px] text-right text-[#787486]">Justin&#64;gmail.com</p>
                                 </div>
 
                                 <div class="flex justify-center items-center">
