--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -102,7 +102,7 @@
                                     <img src="../assets/svgs/bell.svg" alt="">
                                 </div>
                             </div>
-                            <!-- profile div -->
+                            <img src="./a" alt="">                            <!-- profile div -->
                             <div class="flex justify-between items-center w-[215px] rounded-[28px] border border-[#DADDDD] py-[6px] px-[8px] gap-3 ">
                                 <img class="rounded-full w-[38px] h-[38px]" src="../assets/svgs/Rectangle 1061.png" alt="">
                                 <div class="font-inter">
