--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -119,6 +119,144 @@
                     </div>
                     <!--end of  top bar -->
                     
+
+<!-- main body div -->
+
+<div class="grid grid-rows-2">
+    <!-- sales trends and summary div -->
+    <div class="grid grid-cols-3">
+        <!-- sales div -->
+        <div class="col-span-2">
+            
+        </div>
+        <!--end of sales div -->
+        <!-- summary div -->
+        <div class="col-span-1 grid grid-cols-2">
+            
+        </div>
+        <!-- end of summary div -->
+    </div>
+    <!-- end of sales trends and summary div -->
+    <!-- last orders table and top platform div -->
+    <div class="grid grid-cols-3">
+        <!-- last orders div -->
+        <div class="col-span-2 p-4  rounded-[14px] border bg-[#FFFFFF]">
+            <div class="w-full flex justify-between font-jakarta ">
+                <p class="font-semibold text-lg text-[#26282C]">Last Orders</p>
+                <p class="text-[#34CAA5] font-medium text-lg">See All</p>
+            </div>
+            <div class="w-full mx-auto px-4 py-4 ">
+                <table class="table-auto text-left rounded-xl w-full ">
+                    <thead class="border-b border-[#EDF2F6] h-[5rem]" >
+                        <tr class="font-jakarta font-medium text-base self-center text-[#9CA4AB]">
+                            <th class="mt">Name</th>
+                            <th class="mt">Date</th>
+                            <th class="mt">Amount</th>
+                            <th class="mt">Status</th>
+                            <th class="mt">Invoice</th>
+                        </tr>
+                    </thead>
+                    <tbody class="">
+                        <tr class="border-b border-[#EDF2F6] items-center h-[4rem]">
+                           <td class="flex items-center py-4 gap-2">
+                            <img src="../assets/svgs/Rectangle 1061.png" class="rounded-full w-[32px] h-[32px] " alt="">
+                            <p class="font-jakarta font-medium text-base text-[#3A3F51]">Marcus Bergson</p>
+                           </td>
+                           <td class="font-jakarta font-normal text-base">
+                                Nov 15, 2023
+                           </td>
+                           <td class="font-jakarta font-medium text-base">
+                            $80,000
+                           </td>
+                           <td class="font-jakarta font-normal text-base text-[#34CAA5]">
+                            Paid
+                           </td>
+                           <td class="flex gap-2 py-4">
+                            <img src="../assets/svgs/document-download.svg" alt="">
+                            <p class="font-jakarta font-normal text-base">View</p>
+
+                           </td>
+
+                           <tr class="border-b border-[#EDF2F6] items-center h-[4rem]">
+                            <td class="flex items-center py-4 gap-2">
+                             <img src="../assets/svgs/Rectangle 1061.png" class="rounded-full w-[32px] h-[32px] " alt="">
+                             <p class="font-jakarta font-medium text-base text-[#3A3F51]">Marcus Bergson</p>
+                            </td>
+                            <td class="font-jakarta font-normal text-base">
+                                 Nov 15, 2023
+                            </td>
+                            <td class="font-jakarta font-medium text-base">
+                             $80,000
+                            </td>
+                            <td class="font-jakarta font-normal text-base text-[#ED544E]">
+                             Refund
+                            </td>
+                            <td class="flex gap-2 py-4">
+                             <img src="../assets/svgs/document-download.svg" alt="">
+                             <p class="font-jakarta font-normal text-base">View</p>
+
+                            </td>
+
+                        </tr>
+
+                        <tr class="border-b border-[#EDF2F6] items-center h-[4rem]">
+                            <td class="flex items-center py-4 gap-2">
+                             <img src="../assets/svgs/Rectangle 1061.png" class="rounded-full w-[32px] h-[32px] " alt="">
+                             <p class="font-jakarta font-medium text-base text-[#3A3F51]">Marcus Bergson</p>
+                            </td>
+                            <td class="font-jakarta font-normal text-base">
+                                 Nov 15, 2023
+                            </td>
+                            <td class="font-jakarta font-medium text-base">
+                             $80,000
+                            </td>
+                            <td class="font-jakarta font-normal text-base text-[#34CAA5]">
+                             Paid
+                            </td>
+                            <td class="flex gap-2 py-4">
+                             <img src="../assets/svgs/document-download.svg" alt="">
+                             <p class="font-jakarta font-normal text-base">View</p>
+
+                            </td>
+
+                            <tr class="border-b border-[#EDF2F6] items-center h-[4rem]">
+                             <td class="flex items-center py-4 gap-2">
+                              <img src="../assets/svgs/Rectangle 1061.png" class="rounded-full w-[32px] h-[32px] " alt="">
+                              <p class="font-jakarta font-medium text-base text-[#3A3F51]">Marcus Bergson</p>
+                             </td>
+                             <td class="font-jakarta font-normal text-base">
+                                  Nov 15, 2023
+                             </td>
+                             <td class="font-jakarta font-medium text-base">
+                              $80,000
+                             </td>
+                             <td class="font-jakarta font-normal text-base text-[#ED544E]">
+                              Refund
+                             </td>
+                             <td class="flex gap-2 py-4">
+                              <img src="../assets/svgs/document-download.svg" alt="">
+                              <p class="font-jakarta font-normal text-base">View</p>
+
+                             </td>
+
+                         </tr>
+                        
+                    </tbody>
+
+                </table>
+
+            </div>
+        </div>
+        <!-- end of last orders div -->
+        <!-- top platform div -->
+        <div class="col-span-1">
+
+        </div>
+        <!-- end of top platform div -->
+    </div>
+    <!--end of  last orders table and top platform div -->
+</div>
+<!--end of main body div -->
         </div>
         <!-- end of main bosy div -->
 
