--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -122,23 +122,109 @@
 
 <!-- main body div -->
 
-<div class="grid grid-rows-2">
+<div class="grid  gap-4 grid-rows-2">
     <!-- sales trends and summary div -->
-    <div class="grid grid-cols-3">
+    <div class="grid gap-4 grid-cols-3">
         <!-- sales div -->
         <div class="col-span-2">
             
         </div>
         <!--end of sales div -->
         <!-- summary div -->
-        <div class="col-span-1 grid grid-cols-2">
+        <div class="col-span-1 grid gap-4 grid-cols-2 p-4">
+            <!-- box component -->
+            <div class="w-full h-fit p-1 rounded-[14px] bg-white">
+                <div class="flex justify-between py-4 px-2">
+                    <img src="../assets/svgs/Icon.svg" alt="">
+                    <img src="../assets/svgs/trend green.svg" alt="">
+                </div>
+                <div class="font-jakarta py-2 px-2">
+                    <p class="font-medium text-[18px] leading-[28px] text-[#898989]">Total Order</p>
+                    <p class="font-semibold text-2xl text-[#3A3F51]">350</p>
+                </div>
+                <div class="flex gap-4 items-center py-1 px-2">
+                    <div class=" flex w-fit  p-2 rounded-full  bg-[#34CAA51F] bg-opacity-[12%]">
+                        <img src="../assets/svgs/trending-up.svg" alt="">
+                        <p class="text-[#34CAA5]  font-medium font-jakarta text-xs">23.5%</p>
+                    </div>
+                    <p class="text-[#606060] font-inter font-normal text-sm leading-[17px]">vs. previous month</p>
+                </div>
+
+                
+            </div>
+            <!-- box component -->
+
+             <!-- box component -->
+             <div class="w-full h-fit p-1 rounded-[14px] bg-white">
+                <div class="flex justify-between py-4 px-2">
+                    <img src="../assets/svgs/Icon rotate.svg" alt="">
+                    <img src="../assets/svgs/trend red.svg" alt="">
+                </div>
+                <div class="font-jakarta py-2 px-2">
+                    <p class="font-medium text-[18px] leading-[28px] text-[#898989]">Total Refund</p>
+                    <p class="font-semibold text-2xl text-[#3A3F51]">270</p>
+                </div>
+                <div class="flex gap-4 items-center py-1 px-2">
+                    <div class=" flex w-fit  p-2 rounded-full  bg-[#ED544E] bg-opacity-[12%]">
+                        <img src="../assets/svgs/trending-down.svg" alt="">
+                        <p class="text-[#ED544E]  font-medium font-jakarta text-xs">23.5%</p>
+                    </div>
+                    <p class="text-[#606060] font-inter font-normal text-sm leading-[17px]">vs. previous month</p>
+                </div>
+
+                
+            </div>
+            <!-- box component -->
+
             
+            <!-- box component -->
+             <div class="w-full h-fit p-1 rounded-[14px] bg-white">
+                <div class="flex justify-between py-4 px-2">
+                    <img src="../assets/svgs/shop.svg" alt="">
+                    <img src="../assets/svgs/trend red.svg" alt="">
+                </div>
+                <div class="font-jakarta py-2 px-2">
+                    <p class="font-medium text-[18px] leading-[28px] text-[#898989]">Average Sales</p>
+                    <p class="font-semibold text-2xl text-[#3A3F51]">1567</p>
+                </div>
+                <div class="flex gap-4 items-center py-1 px-2">
+                    <div class=" flex w-fit  p-2 rounded-full  bg-[#ED544E] bg-opacity-[12%]">
+                        <img src="../assets/svgs/trending-down.svg" alt="">
+                        <p class="text-[#ED544E]  font-medium font-jakarta text-xs">23.5%</p>
+                    </div>
+                    <p class="text-[#606060] font-inter font-normal text-sm leading-[17px]">vs. previous month</p>
+                </div>
+                
+                
+            </div>
+            <!-- box component -->
+            <!-- box component -->
+            <div class="w-full h-fit p-1 rounded-[14px] bg-white">
+               <div class="flex justify-between py-4 px-2">
+                   <img src="../assets/svgs/Icon.svg" alt="">
+                   <img src="../assets/svgs/trend green.svg" alt="">
+               </div>
+               <div class="font-jakarta py-2 px-2">
+                   <p class="font-medium text-[18px] leading-[28px] text-[#898989]">Total Order</p>
+                   <p class="font-semibold text-2xl text-[#3A3F51]">350</p>
+               </div>
+               <div class="flex gap-4 items-center py-1 px-2">
+                   <div class=" flex w-fit  p-2 rounded-full  bg-[#34CAA5] bg-opacity-[12%]">
+                       <img src="../assets/svgs/trending-up.svg" alt="">
+                       <p class="text-[#34CAA5]  font-medium font-jakarta text-xs">23.5%</p>
+                   </div>
+                   <p class="text-[#606060] font-inter font-normal text-sm leading-[17px]">vs. previous month</p>
+               </div>
+
+               
+           </div>
+           <!-- box component -->
         </div>
         <!-- end of summary div -->
     </div>
     <!-- end of sales trends and summary div -->
     <!-- last orders table and top platform div -->
-    <div class="grid grid-cols-3">
+    <div class="grid gap-4 grid-cols-3">
         <!-- last orders div -->
         <div class="col-span-2 p-4  rounded-[14px] border bg-[#FFFFFF]">
             <div class="w-full flex justify-between font-jakarta ">
@@ -149,11 +235,11 @@
                 <table class="table-auto text-left rounded-xl w-full ">
                     <thead class="border-b border-[#EDF2F6] h-[5rem]" >
                         <tr class="font-jakarta font-medium text-base self-center text-[#9CA4AB]">
-                            <th class="mt">Name</th>
-                            <th class="mt">Date</th>
-                            <th class="mt">Amount</th>
-                            <th class="mt">Status</th>
-                            <th class="mt">Invoice</th>
+                            <th class="mt-2">Name</th>
+                            <th class="mt-2">Date</th>
+                            <th class="mt-2">Amount</th>
+                            <th class="mt-2">Status</th>
+                            <th class="mt-2">Invoice</th>
                         </tr>
                     </thead>
                     <tbody class="">
@@ -257,6 +343,7 @@
     <!--end of  last orders table and top platform div -->
 </div>
 <!--end of main body div -->
+
         </div>
         <!-- end of main bosy div -->
 
