--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,351 +1,1 @@
-
-    <!-- body div -->
-    <div class="w-full font-jakarta bg-[#EBECF2] flex">
-        <!-- side navigation div -->
-        <div class="w-[6%] h-[876px] font-jakarta border-r py-[20px] gap-[10px]  flex flex-col justify-between">
-            <!-- top navigation div -->
-            <div class="w-full h-[488px] flex flex-col gap-[10px] justify-between ">
-                <div class="flex justify-center">
-                    <a href=""><img src="../assets/svgs/Vector.svg" alt=""></a>
-                    
-                </div>
-                <div class="flex relative justify-center">
-                    <a href=""><img src="../assets/svgs/category.svg" alt=""></a>
-                    <div class="absolute right-0">
-                        <img class="" src="../assets/svgs/Vector active.svg" alt="">
-                    </div>
-                </div>
-                <div class="flex relative justify-center">
-                    <a href=""><img src="../assets/svgs/trend-up.svg" alt=""></a>
-                    <div class="absolute right-0 hidden">
-                        <img class="" src="../assets/svgs/Vector active.svg" alt="">
-                    </div>
-                </div>
-                <div class="flex relative justify-center">
-                    <a href=""><img src="../assets/svgs/profile-2user.svg" alt=""></a>
-                    <div class="absolute right-0 hidden">
-                        <img class="" src="../assets/svgs/Vector active.svg" alt="">
-                    </div>
-                </div>
-                <div class="flex relative justify-center">
-                    <a href=""><img src="../assets/svgs/box.svg" alt=""></a>
-                    <div class="absolute right-0 hidden">
-                        <img class="" src="../assets/svgs/Vector active.svg" alt="">
-                    </div>
-                </div>
-                <div class="flex relative justify-center">
-                    <a href=""><img src="../assets/svgs/discount-shape.svg" alt=""></a>
-                    <div class="absolute right-0 hidden">
-                        <img class="" src="../assets/svgs/Vector active.svg" alt="">
-                    </div>
-                </div>
-                <div class="flex relative justify-center">
-                    <a href=""><img src="../assets/svgs/info-circle.svg" alt=""></a>
-                    <div class="absolute right-0 hidden">
-                        <img class="" src="../assets/svgs/Vector active.svg" alt="">
-                    </div>
-                </div>
-                <div class="flex relative justify-center">
-
-                    <button class="w-[46px] h-[92px] rounded-[100px] flex flex-col  bg-[#FFFFFF] p-[8px] gap-[16px]">
-                        <div>
-                            <img src="../assets/svgs/Frame 427319676.svg" alt="">
-                        </div>
-                        <div>
-                        <img src="../assets/svgs/moon 1.svg" alt="">
-                    </div>
-                </button>
-            </div>
-            </div>
-            <!--end of top navigation div -->
-            <!-- bottom navigation div -->
-            <div class="w-full h-[152px] flex flex-col gap-[16px] items-center justify-evenly">
-                <div>
-                   <a href="">
-                    <img src="../assets/svgs/arrow-right.svg" alt=""> 
-                   </a>
-                </div>
-                <div>
-                    <a href="">
-                     <img src="../assets/svgs/setting-2.svg" alt=""> 
-                    </a>
-                 </div>
-                 <div>
-                    <a href="">
-                     <img src="../assets/svgs/logout.svg" alt=""> 
-                    </a>
-                 </div>
-            </div>
-            <!--end of bottom navigation div -->
-        </div>
-        <!-- end of side navigation div -->
-
-        <!-- main bosy div -->
-        <div class="w-[94%] h-[1080px] ">
-                    <!-- top bar -->
-                    <div class="w-full h-[88px] bg-[#FAFAFA] flex justify-between items-center p-4 self-center">
-                        <div class="font-jakarta font-semibold text-xl">
-                            <p>Dashboard</p>
-                        </div>
-                        
-                        <div class="flex justify-evenly items-center gap-5">
-                            <form action="" class="flex h-[48px] items-center w-[349px] rounded-3xl border border-[#DADDDD] text-[#DADDDD] bg-white pl-4 gap-2">
-                                <img src="../assets/svgs/search.svg" class="w-[18px] h-[18px]" alt="">
-                                <input type="text" placeholder="Search.." class="placeholder:text-[#A3A3A3] text-gray-700 h-full placeholder:font-inter outline-none ">
-                            </form>
-                            <div class="w-[253px] flex justify-between items-center font-inter">
-                                <div class="flex justify-between items-center gap-2">
-                                    <img src="../assets/svgs/calender.svg" alt="">
-                                    <p class="font-inter font-medium text-sm leading-[22px]">November 15, 2023</p>
-                                </div>
-                                <div>
-                                    <img src="../assets/svgs/bell.svg" alt="">
-                                </div>
-                            </div>
-                            <img src="./a" alt="">                            <!-- profile div -->
-                            <div class="flex justify-between items-center w-[215px] rounded-[28px] border border-[#DADDDD] py-[6px] px-[8px] gap-3 ">
-                                <img class="rounded-full w-[38px] h-[38px]" src="../assets/svgs/Rectangle 1061.png" alt="">
-                                <div class="font-inter">
-                                    <p class="font-normal text-base leading-[19.36px] text-right">Justin Bergson</p>
-                                    <p class="font-normal  text-sm leading-[16.94px] text-right text-[#787486]">Justin&#64;gmail.com</p>
-                                </div>
-
-                                <div class="flex justify-center items-center">
-                                    <img src="../assets/svgs/Arrow - Down 2.svg" alt="">
-                                </div>
-                            </div>
-                            <!--end of profile div -->
-                        </div>
-                    </div>
-                    <!--end of  top bar -->
-                    
-
-<!-- main body div -->
-
-<div class="grid  gap-4 grid-rows-2">
-    <!-- sales trends and summary div -->
-    <div class="grid gap-4 grid-cols-3">
-        <!-- sales div -->
-        <div class="col-span-2">
-            
-        </div>
-        <!--end of sales div -->
-        <!-- summary div -->
-        <div class="col-span-1 grid gap-4 grid-cols-2 p-4">
-            <!-- box component -->
-            <div class="w-full h-fit p-1 rounded-[14px] bg-white">
-                <div class="flex justify-between py-4 px-2">
-                    <img src="../assets/svgs/Icon.svg" alt="">
-                    <img src="../assets/svgs/trend green.svg" alt="">
-                </div>
-                <div class="font-jakarta py-2 px-2">
-                    <p class="font-medium text-[18px] leading-[28px] text-[#898989]">Total Order</p>
-                    <p class="font-semibold text-2xl text-[#3A3F51]">350</p>
-                </div>
-                <div class="flex gap-4 items-center py-1 px-2">
-                    <div class=" flex w-fit  p-2 rounded-full  bg-[#34CAA51F] bg-opacity-[12%]">
-                        <img src="../assets/svgs/trending-up.svg" alt="">
-                        <p class="text-[#34CAA5]  font-medium font-jakarta text-xs">23.5%</p>
-                    </div>
-                    <p class="text-[#606060] font-inter font-normal text-sm leading-[17px]">vs. previous month</p>
-                </div>
-
-                
-            </div>
-            <!-- box component -->
-
-             <!-- box component -->
-             <div class="w-full h-fit p-1 rounded-[14px] bg-white">
-                <div class="flex justify-between py-4 px-2">
-                    <img src="../assets/svgs/Icon rotate.svg" alt="">
-                    <img src="../assets/svgs/trend red.svg" alt="">
-                </div>
-                <div class="font-jakarta py-2 px-2">
-                    <p class="font-medium text-[18px] leading-[28px] text-[#898989]">Total Refund</p>
-                    <p class="font-semibold text-2xl text-[#3A3F51]">270</p>
-                </div>
-                <div class="flex gap-4 items-center py-1 px-2">
-                    <div class=" flex w-fit  p-2 rounded-full  bg-[#ED544E] bg-opacity-[12%]">
-                        <img src="../assets/svgs/trending-down.svg" alt="">
-                        <p class="text-[#ED544E]  font-medium font-jakarta text-xs">23.5%</p>
-                    </div>
-                    <p class="text-[#606060] font-inter font-normal text-sm leading-[17px]">vs. previous month</p>
-                </div>
-
-                
-            </div>
-            <!-- box component -->
-
-            
-            <!-- box component -->
-             <div class="w-full h-fit p-1 rounded-[14px] bg-white">
-                <div class="flex justify-between py-4 px-2">
-                    <img src="../assets/svgs/shop.svg" alt="">
-                    <img src="../assets/svgs/trend red.svg" alt="">
-                </div>
-                <div class="font-jakarta py-2 px-2">
-                    <p class="font-medium text-[18px] leading-[28px] text-[#898989]">Average Sales</p>
-                    <p class="font-semibold text-2xl text-[#3A3F51]">1567</p>
-                </div>
-                <div class="flex gap-4 items-center py-1 px-2">
-                    <div class=" flex w-fit  p-2 rounded-full  bg-[#ED544E] bg-opacity-[12%]">
-                        <img src="../assets/svgs/trending-down.svg" alt="">
-                        <p class="text-[#ED544E]  font-medium font-jakarta text-xs">23.5%</p>
-                    </div>
-                    <p class="text-[#606060] font-inter font-normal text-sm leading-[17px]">vs. previous month</p>
-                </div>
-                
-                
-            </div>
-            <!-- box component -->
-            <!-- box component -->
-            <div class="w-full h-fit p-1 rounded-[14px] bg-white">
-               <div class="flex justify-between py-4 px-2">
-                   <img src="../assets/svgs/Icon.svg" alt="">
-                   <img src="../assets/svgs/trend green.svg" alt="">
-               </div>
-               <div class="font-jakarta py-2 px-2">
-                   <p class="font-medium text-[18px] leading-[28px] text-[#898989]">Total Order</p>
-                   <p class="font-semibold text-2xl text-[#3A3F51]">350</p>
-               </div>
-               <div class="flex gap-4 items-center py-1 px-2">
-                   <div class=" flex w-fit  p-2 rounded-full  bg-[#34CAA5] bg-opacity-[12%]">
-                       <img src="../assets/svgs/trending-up.svg" alt="">
-                       <p class="text-[#34CAA5]  font-medium font-jakarta text-xs">23.5%</p>
-                   </div>
-                   <p class="text-[#606060] font-inter font-normal text-sm leading-[17px]">vs. previous month</p>
-               </div>
-
-               
-           </div>
-           <!-- box component -->
-        </div>
-        <!-- end of summary div -->
-    </div>
-    <!-- end of sales trends and summary div -->
-    <!-- last orders table and top platform div -->
-    <div class="grid gap-4 grid-cols-3">
-        <!-- last orders div -->
-        <div class="col-span-2 p-4  rounded-[14px] border bg-[#FFFFFF]">
-            <div class="w-full flex justify-between font-jakarta ">
-                <p class="font-semibold text-lg text-[#26282C]">Last Orders</p>
-                <p class="text-[#34CAA5] font-medium text-lg">See All</p>
-            </div>
-            <div class="w-full mx-auto px-4 py-4 ">
-                <table class="table-auto text-left rounded-xl w-full ">
-                    <thead class="border-b border-[#EDF2F6] h-[5rem]" >
-                        <tr class="font-jakarta font-medium text-base self-center text-[#9CA4AB]">
-                            <th class="mt-2">Name</th>
-                            <th class="mt-2">Date</th>
-                            <th class="mt-2">Amount</th>
-                            <th class="mt-2">Status</th>
-                            <th class="mt-2">Invoice</th>
-                        </tr>
-                    </thead>
-                    <tbody class="">
-                        <tr class="border-b border-[#EDF2F6] items-center h-[4rem]">
-                           <td class="flex items-center py-4 gap-2">
-                            <img src="../assets/svgs/Rectangle 1061.png" class="rounded-full w-[32px] h-[32px] " alt="">
-                            <p class="font-jakarta font-medium text-base text-[#3A3F51]">Marcus Bergson</p>
-                           </td>
-                           <td class="font-jakarta font-normal text-base">
-                                Nov 15, 2023
-                           </td>
-                           <td class="font-jakarta font-medium text-base">
-                            $80,000
-                           </td>
-                           <td class="font-jakarta font-normal text-base text-[#34CAA5]">
-                            Paid
-                           </td>
-                           <td class="flex gap-2 py-4">
-                            <img src="../assets/svgs/document-download.svg" alt="">
-                            <p class="font-jakarta font-normal text-base">View</p>
-
-                           </td>
-
-                           <tr class="border-b border-[#EDF2F6] items-center h-[4rem]">
-                            <td class="flex items-center py-4 gap-2">
-                             <img src="../assets/svgs/Rectangle 1061.png" class="rounded-full w-[32px] h-[32px] " alt="">
-                             <p class="font-jakarta font-medium text-base text-[#3A3F51]">Marcus Bergson</p>
-                            </td>
-                            <td class="font-jakarta font-normal text-base">
-                                 Nov 15, 2023
-                            </td>
-                            <td class="font-jakarta font-medium text-base">
-                             $80,000
-                            </td>
-                            <td class="font-jakarta font-normal text-base text-[#ED544E]">
-                             Refund
-                            </td>
-                            <td class="flex gap-2 py-4">
-                             <img src="../assets/svgs/document-download.svg" alt="">
-                             <p class="font-jakarta font-normal text-base">View</p>
-
-                            </td>
-
-                        </tr>
-
-                        <tr class="border-b border-[#EDF2F6] items-center h-[4rem]">
-                            <td class="flex items-center py-4 gap-2">
-                             <img src="../assets/svgs/Rectangle 1061.png" class="rounded-full w-[32px] h-[32px] " alt="">
-                             <p class="font-jakarta font-medium text-base text-[#3A3F51]">Marcus Bergson</p>
-                            </td>
-                            <td class="font-jakarta font-normal text-base">
-                                 Nov 15, 2023
-                            </td>
-                            <td class="font-jakarta font-medium text-base">
-                             $80,000
-                            </td>
-                            <td class="font-jakarta font-normal text-base text-[#34CAA5]">
-                             Paid
-                            </td>
-                            <td class="flex gap-2 py-4">
-                             <img src="../assets/svgs/document-download.svg" alt="">
-                             <p class="font-jakarta font-normal text-base">View</p>
-
-                            </td>
-
-                            <tr class="border-b border-[#EDF2F6] items-center h-[4rem]">
-                             <td class="flex items-center py-4 gap-2">
-                              <img src="../assets/svgs/Rectangle 1061.png" class="rounded-full w-[32px] h-[32px] " alt="">
-                              <p class="font-jakarta font-medium text-base text-[#3A3F51]">Marcus Bergson</p>
-                             </td>
-                             <td class="font-jakarta font-normal text-base">
-                                  Nov 15, 2023
-                             </td>
-                             <td class="font-jakarta font-medium text-base">
-                              $80,000
-                             </td>
-                             <td class="font-jakarta font-normal text-base text-[#ED544E]">
-                              Refund
-                             </td>
-                             <td class="flex gap-2 py-4">
-                              <img src="../assets/svgs/document-download.svg" alt="">
-                              <p class="font-jakarta font-normal text-base">View</p>
-
-                             </td>
-
-                         </tr>
-                        
-                    </tbody>
-
-                </table>
-
-            </div>
-        </div>
-        <!-- end of last orders div -->
-        <!-- top platform div -->
-        <div class="col-span-1">
-
-        </div>
-        <!-- end of top platform div -->
-    </div>
-    <!--end of  last orders table and top platform div -->
-</div>
-<!--end of main body div -->
-
-        </div>
-        <!-- end of main bosy div -->
-
-    </div>
-    <!--end of body div -->
+<app-chartcomponent></app-chartcomponent>
