--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-chartcomponent></app-chartcomponent>
+<div class="grid  sm:gap-4 gap-2 grid-rows-2">
+    <!-- sales trends and summary div -->
+    <div class="grid sm:gap-4 gap-2 grid-cols-3">
+            <app-chartcomponent class="sm:col-span-2 col-span-full" ></app-chartcomponent>
+
+            <app-summarycomponent class="sm:col-span-1 col-span-full grid sm:gap-4 gap-2 grid-cols-2 sm:p-4 p-1"></app-summarycomponent>
