--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,65 @@
+<div class="w-full font-jakarta bg-gray-100 sm:bg-[#EBECF2] sm:flex">
+
+<app-sidenavcomponent class="w-[6%] h-[876px] font-jakarta border-r hidden py-[20px] gap-[10px]  sm:flex flex-col justify-between"></app-sidenavcomponent>
+
+
+
+<div class="sm:w-[94%] sm:h-[1080px] w-full">
+    <!-- top bar -->
+    <div class="w-full sm:h-[88px] flex flex-col sm:flex-row h-[70px] sm:bg-[#FAFAFA]  sm:justify-between  sm:items-center  p-4 self-center">
+        <div class="font-jakarta font-semibold  sm:text-xl">
+            <p  class="">Dashboard</p>
+        </div>
+        <div class="flex w-full justify-between ">
+        <div class="flex justify-evenly  items-center px-0 w-full  sm:gap-5">
+            <form action="" class="flex flex-1 sm:h-[48px] h-[35px] items-center sm:w-[349px]  rounded-3xl mx-3 border border-[#DADDDD] text-[#DADDDD] bg-white pl-4 gap-2">
+                <img src="../assets/svgs/search.svg" class="w-[18px] h-[18px]" alt="">
+                <input type="text" placeholder="Search.." class="rounded-full placeholder:text-[#A3A3A3] text-gray-700 h-full placeholder:font-inter outline-none ">
+            </form>
+        
+            <div class="sm:w-[253px]  w-5/6 sm:flex hidden justify-between items-center font-inter">
+                <div class="flex  justify-between items-center gap-2">
+                    <img src="../assets/svgs/calender.svg" alt="">
+                    <p class="font-inter font-medium text-sm leading-[22px]">November 15, 2023</p>
+                </div>
+                <div class="hidden sm:flex w-fit relative ">
+                    <img src="../assets/svgs/bell.svg" alt="">
+                    <span class="absolute bg-red-500 w-[7px] h-[7px] rounded-full top-2 right-2"></span>
+                </div>
+            </div>
+            <div class="w-fit relative flex sm:hidden ">
+                <img src="../assets/svgs/bell.svg" class="w-[45px] h-[50px]"  alt="">
+                <span class="absolute bg-red-500 w-[7px]  h-[7px] rounded-full top-3 right-3"></span>
+            </div>
+            <!-- profile div -->
+            <div class="flex justify-between items-center sm:w-[215px] w-[30px]  h-[30px] sm:rounded-[28px] rounded-full sm:border border-[#DADDDD] sm:py-[6px] sm:px-[8px] sm:gap-3 ">
+                <img class="rounded-full w-full h-full" src="../assets/svgs/Rectangle 1061.png" alt="">
+                <div class="font-inter hidden sm:block">
+                    <p class="font-normal text-base leading-[19.36px] text-right">Justin Bergson</p>
+                    <p class="font-normal  text-sm leading-[16.94px] text-right text-[#787486]">Justin&#64;gmail.com</p>
+                </div>
+
+                <div class="sm:flex hidden justify-center items-center">
+                    <img src="../assets/svgs/Arrow - Down 2.svg" alt="">
+                </div>
+            </div>
+            <!--end of profile div -->
+        </div>
+    </div>
+    </div>
+    <!--end of  top bar -->
 <div class="grid  sm:gap-4 gap-2 grid-rows-2">
     <!-- sales trends and summary div -->
     <div class="grid sm:gap-4 gap-2 grid-cols-3">
             <app-chartcomponent class="sm:col-span-2 col-span-full" ></app-chartcomponent>
 
             <app-summarycomponent class="sm:col-span-1 col-span-full grid sm:gap-4 gap-2 grid-cols-2 sm:p-4 p-1"></app-summarycomponent>
+
+</div>
+<div class="sm:grid md:gap-4 flex sm:gap-2 grid-cols-3">
+
+    <app-tablecomponent class="md:col-span-2 sm:col-span-full sm:p-4 w-full  rounded-[14px] border bg-[#FFFFFF]"></app-tablecomponent>
+    <div>
+        
+    </div>
+</div>
