--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,9 +12,9 @@
         </div>
         <div class="flex w-full justify-between ">
         <div class="flex justify-evenly  items-center px-0 w-full  sm:gap-5">
-            <form action="" class="flex flex-1 sm:h-[48px] h-[35px] items-center sm:w-[349px]  rounded-3xl mx-3 border border-[#DADDDD] text-[#DADDDD] bg-white pl-4 gap-2">
+            <form action="" class="flex  sm:h-[48px] h-[35px] items-center sm:w-[349px]  rounded-3xl mx-3 border border-[#DADDDD] text-[#DADDDD] bg-white pl-4 gap-2">
                 <img src="../assets/svgs/search.svg" class="w-[18px] h-[18px]" alt="">
-                <input type="text" placeholder="Search.." class="rounded-full placeholder:text-[#A3A3A3] text-gray-700 h-full placeholder:font-inter outline-none ">
+                <input type="text" placeholder="Search.." class="rounded-full placeholder:text-[#A3A3A3] sm:flex-1 text-gray-700 h-full placeholder:font-inter outline-none border-none focus:outline-none ">
             </form>
         
             <div class="sm:w-[253px]  w-5/6 sm:flex hidden justify-between items-center font-inter">
@@ -68,7 +68,7 @@
 <div class="sm:grid md:gap-4 flex sm:gap-2 grid-cols-3">
 
     <app-tablecomponent class="md:col-span-2 sm:col-span-full sm:p-4 w-full  rounded-[14px] border bg-[#FFFFFF]"></app-tablecomponent>
-    <app-progressive class="md:col-span-1 sm:col-span-full "></app-progressive>
+    <app-progressive [progress]="progress" ngxIntersection (intersection)="onIntersection(onIntersectionCasting($event))" [@progressAnimation]="'in'" class="md:col-span-1 sm:col-span-full "></app-progressive>
     <div>
         
     </div>
