--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,17 @@
-<div class="w-full font-jakarta bg-gray-100 sm:bg-[#EBECF2] sm:flex">
+<div class="w-screen font-jakarta   sm:bg-[#EBECF2] flex">
 
 <app-sidenavcomponent class="w-[6%] h-[876px] font-jakarta border-r hidden py-[20px] gap-[10px]  sm:flex flex-col justify-between"></app-sidenavcomponent>
 
 
 
-<div class="sm:w-[94%] sm:h-[1080px] w-full">
+<div class="sm:w-[94%] sm:h-[1080px]  w-full ">
     <!-- top bar -->
-    <div class="w-full sm:h-[88px] relative flex flex-col sm:flex-row h-[70px] sm:bg-[#FAFAFA]  sm:justify-between  sm:items-center  p-4 self-center">
-        <div class="font-jakarta font-semibold  sm:text-xl">
+    <div class=" sm:h-[88px] relative flex flex-col w-screen sm:flex-row h-[70px] sm:bg-[#FAFAFA]  sm:justify-between  sm:items-center  p-4 self-center">
+        <div class="font-jakarta font-semibold  sm:text-xl w-full">
             <p  class="">Dashboard</p>
         </div>
-        <div class="flex w-full justify-between ">
-        <div class="flex justify-evenly  items-center px-0 w-full  sm:gap-5">
+        <div class=" w-full justify-between  ">
+        <div class="flex justify-evenly sm:justify-between  items-center px-0 w-full  sm:gap-5">
             <form action="" class="flex  sm:h-[48px] h-[35px] items-center sm:w-[349px]  rounded-3xl mx-3 border border-[#DADDDD] text-[#DADDDD] bg-white pl-4 gap-2">
                 <img src="../assets/svgs/search.svg" class="w-[18px] h-[18px]" alt="">
                 <input type="text" placeholder="Search.." class="rounded-full placeholder:text-[#A3A3A3] sm:flex-1 text-gray-700 h-full placeholder:font-inter outline-none border-none focus:outline-none ">
@@ -54,10 +54,10 @@
     </div>
     <button class="bg-gray-700 hidden" (click)="openDialog()">clickkkkkkkk</button>
     <!--end of  top bar -->
-    <div class=" absolute right-0">
+    <div class=" absolute right-0 hidden">
         profile div here
     </div>
-<div class="grid  sm:gap-4 gap-2 grid-rows-2">
+<div class="grid   sm:gap-4 gap-2 grid-rows-2">
     <!-- sales trends and summary div -->
     <div class="grid sm:gap-4 gap-2 grid-cols-3">
             <app-chartcomponent class="sm:col-span-2 col-span-full" ></app-chartcomponent>
@@ -68,7 +68,7 @@
 <div class="sm:grid md:gap-4 flex sm:gap-2 grid-cols-3">
 
     <app-tablecomponent class="md:col-span-2 col-span-full sm:p-4 w-full  rounded-[14px] border bg-[#FFFFFF]"></app-tablecomponent>
-    <app-progressive class="sm:col-span-1 col-span-full " [progress]="progress" ngxIntersection (intersection)="onIntersection(onIntersectionCasting($event))" [@progressAnimation]="'in'" class="md:col-span-1 sm:col-span-full "></app-progressive>
+    <app-progressive  [progress]="progress" ngxIntersection (intersection)="onIntersection(onIntersectionCasting($event))" class="md:col-span-1 col-span-full "></app-progressive>
     <div>
         
     </div>
