did rubbish again

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="w-screen font-jakarta   sm:bg-[#EBECF2] flex">
 
-<app-sidenavcomponent class="w-[6%] h-[876px] font-jakarta border-r hidden py-[20px] gap-[10px]  sm:flex flex-col justify-between"></app-sidenavcomponent>
+<app-sidenavcomponent class="md:w-[6%] h-[876px] w-0 font-jakarta border-r hidden py-[20px] gap-[10px]  sm:flex flex-col justify-between"></app-sidenavcomponent>
 
 
 
