--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,25 +4,26 @@
 
 
 
-<div class="sm:w-[94%] sm:h-[1080px]  w-full ">
+<div class="sm:w-[94%] sm:h-[1080px]   ">
     <!-- top bar -->
-    <div class=" sm:h-[88px] relative flex flex-col w-screen sm:flex-row h-[70px] sm:bg-[#FAFAFA]  sm:justify-between  sm:items-center  p-4 self-center">
-        <div class="font-jakarta font-semibold  sm:text-xl w-full">
+    <!-- <div class=" sm:h-[88px] relative flex flex-col  sm:flex-row h-[70px] sm:bg-[#FAFAFA]  sm:justify-between  sm:items-center  p-4 self-center">  -->
+        <div class="font-jakarta font-semibold  sm:text-xl w-full px-4 py-3">
             <p  class="">Dashboard</p>
-        </div>
-        <div class=" w-full justify-between  ">
-        <div class="flex justify-evenly sm:justify-between  items-center px-0 w-full  sm:gap-5">
-            <form action="" class="flex  sm:h-[48px] h-[35px] items-center sm:w-[349px]  rounded-3xl mx-3 border border-[#DADDDD] text-[#DADDDD] bg-white pl-4 gap-2">
-                <img src="../assets/svgs/search.svg" class="w-[18px] h-[18px]" alt="">
-                <input type="text" placeholder="Search.." class="rounded-full placeholder:text-[#A3A3A3] sm:flex-1 text-gray-700 h-full placeholder:font-inter outline-none border-none focus:outline-none ">
-            </form>
+        </div> 
         
-            <div class="sm:w-[253px]  w-5/6 sm:flex hidden justify-between items-center font-inter">
+        <div class=" w-full space-x-4 ">
+        <div class="flex  items-center px-1    sm:gap-5">
+            <form action="" class="flex w-4/6  sm:h-[48px] h-[35px] items-center sm:w-[349px]  rounded-3xl mx-3 border border-[#DADDDD] text-[#DADDDD] bg-white pl-4 gap-2">
+                <img src="../assets/svgs/search.svg" class="w-[18px] h-[18px]" alt="">
+                <input type="text" placeholder="Search.." class="rounded-full placeholder:text-[#A3A3A3] w-4/5 text-gray-700 h-full placeholder:font-inter outline-none border-none focus:outline-none ">
+            </form>
+        <!-- <div class="flex-1"></div> -->
+            <div class="sm:w-[253px] w-fit  flex justify-between items-center font-inter">
                 <div class="flex  justify-between items-center gap-2">
                     <button (click)="togglecalendar()">
                         <img src="../assets/svgs/calender.svg" alt="">
                     </button>
-                    <p class="font-inter font-medium text-sm leading-[22px]">November 15, 2023</p>
+                    <p class="font-inter font-medium hidden md:flex text-sm leading-[22px]">November 15, 2023</p>
                 </div>
                 @if (showcalendar){
                     <app-calendarcomponent class="absolute top-20"></app-calendarcomponent>
@@ -31,13 +32,15 @@
                     <img src="../assets/svgs/bell.svg" alt="">
                     <span class="absolute bg-red-500 w-[7px] h-[7px] rounded-full top-2 right-2"></span>
                 </div>
+              
             </div>
             <div class="w-fit relative flex sm:hidden ">
                 <img src="../assets/svgs/bell.svg" class="w-[45px] h-[50px]"  alt="">
                 <span class="absolute bg-red-500 w-[7px]  h-[7px] rounded-full top-3 right-3"></span>
             </div>
+        
             <!-- profile div -->
-            <button (click)="showprofile()" class="flex justify-between items-center sm:w-[215px] w-[30px] sm:h-full h-[30px] sm:rounded-[28px] rounded-full sm:border border-[#DADDDD] sm:py-[6px] sm:px-[8px] sm:gap-3 ">
+            <div (click)="showprofile()" class="flex justify-between  items-center sm:w-[215px] w-[30px] sm:h-full h-[30px] sm:rounded-[28px] rounded-full sm:border border-[#DADDDD] sm:py-[6px] sm:px-[8px] sm:gap-3 ">
                 <img class="rounded-full w-full h-full" src="../assets/svgs/Rectangle 1061.png" alt="">
                 <div class="font-inter hidden sm:block">
                     <p class="font-normal text-base leading-[19.36px] text-right">Justin Bergson</p>
@@ -47,16 +50,16 @@
                 <div class="sm:flex hidden justify-center items-center w-[60px] ">
                     <img src="../assets/svgs/Arrow - Down 2.svg" alt="">
                 </div>
-            </button>
+            </div>
             <!--end of profile div -->
         </div>
+    
     </div>
-    </div>
-    <button class="bg-gray-700 hidden" (click)="openDialog()">clickkkkkkkk</button>
+    <!-- <button class="bg-gray-700 hidden" (click)="openDialog()">clickkkkkkkk</button> -->
     <!--end of  top bar -->
-    <div class=" absolute right-0 hidden">
+    <!-- <div class=" absolute right-0 hidden">
         profile div here
-    </div>
+    </div> -->
 <div class="grid   sm:gap-4 gap-2 grid-rows-2">
     <!-- sales trends and summary div -->
     <div class="grid sm:gap-4 gap-2 grid-cols-3">
