--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,11 +4,26 @@
 
 
 
-<div class="sm:w-[94%] sm:h-[1080px]   ">
+<div class="sm:w-[94%] sm:h-[1080px] px-0 py-0 relative sm:px-4 sm:py-5  ">
     <!-- top bar -->
     <!-- <div class=" sm:h-[88px] relative flex flex-col  sm:flex-row h-[70px] sm:bg-[#FAFAFA]  sm:justify-between  sm:items-center  p-4 self-center">  -->
-        <div class="font-jakarta font-semibold  sm:text-xl w-full px-4 py-3">
+        <div class="md:flex block">
+        <div class="font-jakarta font-semibold flex justify-between py-4 sm:text-xl w-full px-4 sm:py-3">
             <p  class="">Dashboard</p>
+            <button (click)="shownav()"  class="active:bg-transparent bg-transparent focus:ring-0 flex sm:hidden " id="navtoggle" >
+                @if (!shown) {    
+                  <svg width="24" id="open" class="" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <rect y="5" width="24" height="2" fill="#D9D9D9"/>
+                          <rect x="9" y="12" width="15" height="2" fill="#D9D9D9"/>
+                          </svg>}
+                  @if (shown){
+                          <svg width="24" id="close" class="" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <rect width="1" height="1" transform="matrix(1 0 0 -1 11 12)" fill="#D9D9D9"/>
+                              <rect x="3" y="19.9706" width="24" height="2" transform="rotate(-45 3 19.9706)" fill="#D9D9D9"/>
+                              <rect x="4" y="3" width="24" height="2" transform="rotate(45 4 3)" fill="#D9D9D9"/>
+                          </svg>
+                  }
+                      </button>
         </div> 
         
         <div class=" w-full space-x-4 h-fit">
@@ -26,7 +41,9 @@
                     <p class="font-inter font-medium hidden md:flex text-sm leading-[22px]">November 15, 2023</p>
                 </div>
                 @if (showcalendar){
-                    <app-calendarcomponent class="absolute top-20"></app-calendarcomponent>
+                    <div class="absolute right-3 w-fit h-fit sm:right-44 top-[7rem] z-50 bg-gray-200 rounded-lg ">
+                        <app-calendarcomponent class=""></app-calendarcomponent>
+                    </div>
                 }
                 <div class="hidden sm:flex w-fit relative ">
                     <img src="../assets/svgs/bell.svg" alt="">
@@ -55,6 +72,7 @@
         </div>
     
     </div>
+</div>
     <!-- <button class="bg-gray-700 hidden" (click)="openDialog()">clickkkkkkkk</button> -->
     <!--end of  top bar -->
     <!-- <div class=" absolute right-0 hidden">
