--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,8 +46,8 @@
                     </div>
                 }
                 <div class="hidden sm:flex w-fit relative ">
-                    <img src="../assets/svgs/bell.svg" alt="">
-                    <span class="absolute bg-red-500 w-[7px] h-[7px] rounded-full top-2 right-3"></span>
+                    <img src="../assets/svgs/bell.svg" alt="">fsg
+                    <span class="absolute bg-red-500 w-[7px] h-[7px] rounded-full top-3 right-8"></span>
                 </div>
               
             </div>
