--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,7 +46,7 @@
                     </div>
                 }
                 <div class="hidden sm:flex w-fit relative ">
-                    <img src="../assets/svgs/bell.svg" alt="">fsg
+                    <img src="../assets/svgs/bell.svg" alt="">
                     <span class="absolute bg-red-500 w-[7px] h-[7px] rounded-full top-3 right-8"></span>
                 </div>
               
