--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -80,11 +80,11 @@
     </div> -->
 <div class="grid   sm:gap-4 gap-2 grid-rows-2">
     <!-- sales trends and summary div -->
-    <div class="grid sm:gap-4 gap-2 grid-cols-3">
-            <app-chartcomponent class="sm:col-span-2 col-span-full py-3" ></app-chartcomponent>
+    <div class="grid sm:gap-4 gap-2 grid-cols-3 ">
+            <app-chartcomponent class="sm:col-span-2 bg-white rounded -md col-span-full py-3" ></app-chartcomponent>
             
        
-            <app-summarycomponent class="sm:col-span-1 col-span-full py-3 grid sm:gap-4 gap-2 grid-cols-2 sm:p-4 p-1"></app-summarycomponent>
+            <app-summarycomponent class="sm:col-span-1 bg-white rounded-md col-span-full py-3 grid sm:gap-4 gap-2 grid-cols-2 sm:p-4 p-1"></app-summarycomponent>
 
 </div>
 <div class="sm:grid md:gap-4 sm:gap-2 grid-cols-3">
